src/objects/EmployeeAvailability__c.object
<CustomObject>
    <fields>
        <fullName>TuesdayEnd__c</fullName>
        <label>Tuesday End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TuesdayStart1__c</fullName>
        <label>Tuesday Start.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TuesdayStart__c</fullName>
        <label>Tuesday Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WMSIntegrationStatusFormula__c</fullName>
        <formula>CASE
(	WMSIntegrationStatus__c,
	&apos;Up To Date&apos;, IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;Up To Date&apos;, 10, 10) + IMAGE(&apos;/s.gif&apos;, &apos;&apos;, 10, 3) + &apos; Up To Date&apos;,
	&apos;Pending&apos;, IMAGE(&apos;/img/msg_icons/warning16.png&apos;, &apos;Pending&apos;, 10, 10) + IMAGE(&apos;/s.gif&apos;, &apos;&apos;, 10, 3) + &apos; Pending&apos;,
	&apos;Failed&apos;, IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Failed&apos;, 10 ,10) + IMAGE(&apos;/s.gif&apos;, &apos;&apos;, 10, 3) + &apos; Failed&apos;,
	&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WMS Integration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WMSIntegrationStatus__c</fullName>
        <label>WMS Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Up To Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WednesdayEnd1__c</fullName>
        <label>Wednesday End.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WednesdayEnd__c</fullName>
        <label>Wednesday End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:05 PM</fullName>
                </value>
                <value>
                    <fullName>12:10 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:20 PM</fullName>
                </value>
                <value>
                    <fullName>12:25 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:35 PM</fullName>
                </value>
                <value>
                    <fullName>12:40 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:50 PM</fullName>
                </value>
                <value>
                    <fullName>12:55 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:05 PM</fullName>
                </value>
                <value>
                    <fullName>1:10 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:20 PM</fullName>
                </value>
                <value>
                    <fullName>1:25 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:35 PM</fullName>
                </value>
                <value>
                    <fullName>1:40 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:50 PM</fullName>
                </value>
                <value>
                    <fullName>1:55 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:05 PM</fullName>
                </value>
                <value>
                    <fullName>2:10 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:20 PM</fullName>
                </value>
                <value>
                    <fullName>2:25 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WednesdayStart1__c</fullName>
        <label>Wednesday Start.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WednesdayStart__c</fullName>
        <label>Wednesday Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:05 AM</fullName>
                </value>
                <value>
                    <fullName>6:10 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:20 AM</fullName>
                </value>
                <value>
                    <fullName>6:25 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:35 AM</fullName>
                </value>
                <value>
                    <fullName>6:40 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:50 AM</fullName>
                </value>
                <value>
                    <fullName>6:55 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:05 AM</fullName>
                </value>
                <value>
                    <fullName>7:10 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
                <value>
                    <fullName>7:20 AM</fullName>
                </value>
                <value>
                    <fullName>7:25 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:35 AM</fullName>
                </value>
                <value>
                    <fullName>7:40 AM</fullName>
                </value>
                <value>
                    <fullName>7:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:50 AM</fullName>
                </value>
                <value>
                    <fullName>7:55 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:05 AM</fullName>
                </value>
                <value>
                    <fullName>8:10 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:20 AM</fullName>
                </value>
                <value>
                    <fullName>8:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee Availability</label>
    <nameField>
        <displayFormat>EAVAIL-{000000}</displayFormat>
        <label>Employee Availability</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Availabilities</pluralLabel>
    <recordTypes>
        <fullName>BaseAvailability</fullName>
        <active>true</active>
        <description>Used to record base (standard) availability</description>
        <label>Base Availability</label>
    </recordTypes>
    <recordTypes>
        <fullName>OverrideAvailability</fullName>
        <active>false</active>
        <description>Used for recording variances to base availability</description>
        <label>Override Availability</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>